src/objects/BracketsSettingsPersonal__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>Hide_Dialog_Predictions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Dialog Predictions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Setup_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Setup Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Setup_Step_2_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initial Setup Step 2 Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Brackets Personal Settings</label>
</CustomObject>